data/derived/fa15/progs/unify/prog1374.ml.out
Characters 61-74:
  let rec digitsOfInt n = if n < 0 then [] else (n mod 10) :: [digitsOfInt n / 1]0;;
                                                               ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
